Add RSS feed, remove sources.xml, update parser
Fixes #25 - remove extraneous sources.xml, which was sort of duplicated by other endpoints
Fixes #23 - adds a global feed endpoint, all RSS feeds consumed by the bot
Fixes #18 - updates the command parser and adds documentation and examples
